# thesis

ros2_control_nav/: CMakeLists.txt  package.xml
ros2_control_nav/SLAM/: env.py  lidar.py  main.py  sensor.py
ros2_control_nav/gazebo/world/: my_world
ros2_control_nav/gazebo/world/unit_box/: model.sdf
ros2_control_nav/scripts/: Move_Step_Node.py  Sub_gui_node.py  a_sdk_packet_handler.py  basic_movement.py  gui_node.py  imu_control.py  joy.py  joy_control.py  lidar_control.py  motor_lidar_mux.py  motor_start.py  move_base_node.py  move_with_pose.py  note  sub_GUI_for_move_step_node.py  sub_nav2.py  test_sub_pub.py
ros2_control_nav/scripts/clean_code/: basic_base_move.py
