<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_control_nav</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="onnalin.internship@gmail.com">onnalin</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>dynamixel_sdk</depend>
  <depend>realsense-ros</depend>
  <depend>mobile_control_01</depend>
  <depend>imu_tools</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
